--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "schneider-demo",
+  "version": "0.0.0~alpha",
   "private": true,
-  "homepage": "https://ai-dsm-gamer.netlify.app",
+  "homepage": "https://schneider-demo.netlify.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
